update: updated dependencies

--- a/src/app/gymweb/gymweb.component.html
+++ b/src/app/gymweb/gymweb.component.html
@@ -1,16 +1,24 @@
 <section>
+    <app-navbar></app-navbar>
+  </section>
+
+<section>
     <app-home></app-home>
-  </section>
-  
-  <section>
+</section>
+
+<section>
     <app-about></app-about>
-  </section>
+</section>
   
-  <section>
+<section>
     <app-enquiry></app-enquiry>
-  </section>
+</section>
   
-  <section>
+<section>
     <app-contact></app-contact>
-  </section>
+</section>
+
+<section>
+  <app-footer></app-footer>
+</section>
   
