feat: added header and footer

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
-<section>
-<p>home works!</p>
-</section>
+<div class="p-4 sm:p-6 dark:bg-black relative" style="background-image: url('path/to/your/footer-bg.jpg'); background-size: cover; background-repeat: no-repeat;">
+    <div class="absolute inset-0 z-[-1]">
+        <img src="path/to/your/footer-bg.jpg" alt="Background Image" class="w-full h-full object-cover filter blur-md" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" />
+    </div>
+    <!--  content -->
+</div>
