--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,9 @@
-<div class="p-4 sm:p-6 dark:bg-black relative" style="background-image: url('path/to/your/footer-bg.jpg'); background-size: cover; background-repeat: no-repeat;">
-    <div class="absolute inset-0 z-[-1]">
-        <img src="path/to/your/footer-bg.jpg" alt="Background Image" class="w-full h-full object-cover filter blur-md" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" />
+<div class="p-4 sm:p-6 dark:bg-black relative flex items-center justify-center min-h-screen" style="background-image: url('/assets/homegym.jpg'); background-size: cover; background-repeat: no-repeat;">
+    <div class="text-left">
+       <h1 class="text-white font-bold text-4xl">LOOKING FOR</h1>
+       <h1 class="text-white font-extrabold text-7xl">PERSONAL TRAINER?</h1>
+       <p class="text-white font-2xl pt-8">Welcome to PulsePower Gym, where fitness meets transformation. <br/>
+        Our state-of-the-art facility and dedicated team are here to help you achieve your fitness goals and lead a healthier, happier life.</p>
+       <button class="bg-blue-400 hover:bg-blue-200 text-white font-bold py-3 px-10 mt-4 rounded-full">JOIN US</button>
     </div>
-    <!--  content -->
 </div>
