fix: updated home ui

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="p-4 sm:p-6 dark:bg-black relative flex items-center justify-center min-h-screen" style="background-image: url('/assets/homegym.jpg'); background-size: cover; background-repeat: no-repeat;">
-    <div class="text-left">
+    <div class="text-left relative z-10 backdrop-blur-sm bg-opacity-40 bg-gray-900 p-6 rounded-xl">
        <h1 class="text-white font-bold text-4xl">LOOKING FOR</h1>
        <h1 class="text-white font-extrabold text-7xl">PERSONAL TRAINER?</h1>
-       <p class="text-white font-2xl pt-8">Welcome to PulsePower Gym, where fitness meets transformation. <br/>
+       <p class="text-white font-semibold pt-8">Welcome to PulsePower Gym, where fitness meets transformation. <br/>
         Our state-of-the-art facility and dedicated team are here to help you achieve your fitness goals and lead a healthier, happier life.</p>
+       <div class="flex gap-4">
        <button class="bg-blue-400 hover:bg-blue-200 text-white font-bold py-3 px-10 mt-4 rounded-full">JOIN US</button>
+       <button class="bg-transparent hover:bg-gray-300 text-white font-bold py-3 px-10 mt-4 rounded-full border border-white">ASK YOUR DOUBTS</button>
+       </div>
     </div>
 </div>
+
