feat: added about us

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,72 @@
-<section>
-    <p>about works!</p>
-</section>
+<div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
+    <div class="md:w-1/2 flex justify-center items-center">
+        <div class="mt-4 md:px-12">
+            <h1 class="text-7xl text-white font-extrabold">TRAINING </h1>
+            <h1 class="text-5xl font-bold text-white pb-6">SERVICES WE OFFER</h1>
+            <p class="mt-2 text-gray-200 font-semibold">Discover a variety of personalized training programs and expert-led fitness classes to help you achieve your fitness goals.</p>
+        </div>
+    </div>
+    <div class="md:w-1/2 bg-opacity-100 p-8">
+        <div class="container mx-auto px-4">
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                
+                <div class="bg-orange-200 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Cardio Training</h3>
+                    <p class="text-center text-sm font-serif">Elevate your heart rate and improve cardiovascular health</p>
+                    <p class="mt-4 font-semibold text-center">1000 rs per month</p>
+                </div>
+
+               
+                <div class="bg-orange-100 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Weight Training</h3>
+                    <p class="text-center text-sm font-serif">Build strength and muscle with our extensive weightlifting equipment</p>
+                    <p class="mt-4 font-semibold text-center">700 rs per month</p>
+                </div>
+
+                
+                <div class="bg-orange-200 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Functional Training</h3>
+                    <p class="text-center text-sm font-serif">Enhance your everyday movements and core strength</p>
+                    <p class="mt-4 font-semibold text-center">1000 rs per month</p>
+                </div>
+
+                <div class="bg-orange-100 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Boxing and Martial Arts</h3>
+                    <p class="text-center text-sm font-serif">Develop self-defense skills and boost agility</p>
+                    <p class="mt-4 font-semibold text-center">850 rs per month</p>
+                </div>
+
+                <div class="bg-orange-200  p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Stretching and Flexibility</h3>
+                    <p class="text-center text-sm font-serif">Increase flexibility and prevent injuries</p>
+                    <p class="mt-4 font-semibold text-center">500 rs per month</p>
+                </div>
+
+                <div class="bg-orange-100 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Balance Training</h3>
+                    <p class="text-center text-sm font-serif">Enhance stability and coordination</p>
+                    <p class="mt-4 font-semibold text-center">900 rs per month</p>
+                </div>
+                
+                <div class="bg-orange-200 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Agility Training</h3>
+                    <p class="text-center text-sm font-serif">Improve speed, quickness, and agility</p>
+                    <p class="mt-4 font-semibold text-center">600 rs per month</p>
+                </div>
+
+                <div class="bg-orange-100 p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Pilates</h3>
+                    <p class="text-center text-sm font-serif">Strengthen your core and improve flexibility through controlled movements.</p>
+                    <p class="mt-4 font-semibold text-center">800 rs per movie</p>
+                </div>
+
+                <div class="bg-orange-200  p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold font-serif text-center mb-4">Circuit Training</h3>
+                    <p class="text-center text-sm font-serif">Rotate through various exercises for a full-body workout in a short time.</p>
+                    <p class="mt-4 font-semibold text-center">1000 rs per month</p>
+                </div>
+
+
+    </div>
+</div>
