--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,26 @@
-<div class="p-4 sm:p-6 dark:bg-black relative flex items-center justify-center min-h-screen" style="background-image: url('/assets/homegym.jpg'); background-size: cover; background-repeat: no-repeat;">
-    <div class="text-left relative z-10 backdrop-blur-sm bg-opacity-40 bg-gray-900 p-6 rounded-xl">
-       <h1 class="text-white font-bold text-4xl">LOOKING FOR</h1>
-       <h1 class="text-white font-extrabold text-7xl">PERSONAL TRAINER?</h1>
+<div class="p-4 pb-12 sm:p-6 dark:bg-black relative flex items-center justify-center min-h-screen" style="background-image: url('/assets/homegym.jpg'); background-size: cover; background-repeat: no-repeat;">
+    <div class="text-left max-md:px-4 relative z-10 backdrop-blur-sm bg-opacity-40 bg-gray-900 p-6 rounded-xl">
+       <h1 class="text-white font-bold text-2xl md:text-3xl lg:text-4xl">LOOKING FOR</h1>
+       <h1 class="text-white font-extrabold text-3xl md:text-5xl lg:text-7xl">PERSONAL TRAINER?</h1>
        <p class="text-white font-semibold pt-8">Welcome to PulsePower Gym, where fitness meets transformation. <br/>
         Our state-of-the-art facility and dedicated team are here to help you achieve your fitness goals and lead a healthier, happier life.</p>
        <div class="flex gap-4">
-       <button class="bg-blue-400 hover:bg-blue-200 text-white font-bold py-3 px-10 mt-4 rounded-full">JOIN US</button>
-       <button class="bg-transparent hover:bg-gray-300 text-white font-bold py-3 px-10 mt-4 rounded-full border border-white">ASK YOUR DOUBTS</button>
+       <button class="bg-blue-400 hover:bg-blue-200 text-white font-bold md:py-3  py-1 px-4 text-sm md:text-lg md:px-10 mt-4 rounded-full">JOIN US</button>
+       <button class="bg-transparent hover:bg-gray-300 text-white font-bold text-sm md:text-lg py-1 md:py-3 px-4 md:px-10 mt-4 rounded-full border border-white">ASK YOUR DOUBTS</button>
        </div>
     </div>
 </div>
-
+<div class="bg-blend-lighten">
+<div class="flex flex-col justify-center py-8 items-center">
+   <h1 class="text-2xl md:text-3xl lg:text-3xl font-bold font-serif text-gray-700 py-8">THE MOTIVATION</h1> 
+   <p class="flex justify-center font-thin from-stone-600 text-center text-gray-500 max-md:text-sm max-md:px-8 max-lg:px-8 pb-16">At our gym, our mission is rooted in a profound commitment to the pursuit of health and wellness.<br/> 
+    Our motivation behind establishing this fitness haven goes beyond business; it's about creating a 
+    haven for individuals to transform<br/>their lives. We've seen the transformative power of regular exercise,
+     and our aim is to share this experience with our <br/>community. Our gym is more than just a facility; it's
+      a place where people come together to challenge themselves, push their limits, and achieve their fitness 
+      goals.<br/> We believe in fostering a sense of community and support that extends beyond physical fitness.<br/>
+      Witnessing the incredible transformations our members undergo is what drives us every day, reminding 
+      us of the immense value a <br/>gym can bring to those seeking a healthier and happier life.</p>
+      <img src="/assets/homeimg.png" alt="Gym" class="w-1/4 max-md:w-1/2" >
+</div>
+</div>
