update: added hover effects to the cards

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,62 +11,142 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
-                <div class="bg-orange-200 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Cardio Training</h3>
-                    <p class="text-center text-sm font-serif">Elevate your heart rate and improve cardiovascular health</p>
-                    <p class="mt-4 font-semibold text-center">1000 rs per month</p>
-                </div>
+                <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> CARDIO <br /> TRAINING </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-3">
+                        Elevate your heart rate and improve cardiovascular health
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.1000 per month
+                      </div>
+                    </div>
+                  </div>
 
-               
-                <div class="bg-orange-100 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Weight Training</h3>
-                    <p class="text-center text-sm font-serif">Build strength and muscle with our extensive weightlifting equipment</p>
-                    <p class="mt-4 font-semibold text-center">700 rs per month</p>
-                </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105 ">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> WEIGHT <br /> TRAINING </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 pb-1">
+                        Build strength and muscle with our extensive weightlifting equipment
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.700 per month
+                      </div>
+                    </div>
+                  </div>
 
-                
-                <div class="bg-orange-200 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Functional Training</h3>
-                    <p class="text-center text-sm font-serif">Enhance your everyday movements and core strength</p>
-                    <p class="mt-4 font-semibold text-center">1000 rs per month</p>
-                </div>
-
-                <div class="bg-orange-100 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Boxing and Martial Arts</h3>
-                    <p class="text-center text-sm font-serif">Develop self-defense skills and boost agility</p>
-                    <p class="mt-4 font-semibold text-center">850 rs per month</p>
-                </div>
-
-                <div class="bg-orange-200  p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Stretching and Flexibility</h3>
-                    <p class="text-center text-sm font-serif">Increase flexibility and prevent injuries</p>
-                    <p class="mt-4 font-semibold text-center">500 rs per month</p>
-                </div>
-
-                <div class="bg-orange-100 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Balance Training</h3>
-                    <p class="text-center text-sm font-serif">Enhance stability and coordination</p>
-                    <p class="mt-4 font-semibold text-center">900 rs per month</p>
-                </div>
-                
-                <div class="bg-orange-200 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Agility Training</h3>
-                    <p class="text-center text-sm font-serif">Improve speed, quickness, and agility</p>
-                    <p class="mt-4 font-semibold text-center">600 rs per month</p>
-                </div>
-
-                <div class="bg-orange-100 p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif mb-4 text-center">Pilates</h3>
-                    <p class="text-center text-sm font-serif">Strengthen your core and improve flexibility through controlled movements.</p>
-                    <p class="mt-4 font-semibold text-center">800 rs per movie</p>
-                </div>
-
-                <div class="bg-orange-200  p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold font-serif text-center mb-4">Circuit Training</h3>
-                    <p class="text-center text-sm font-serif">Rotate through various exercises for a full-body workout in a short time.</p>
-                    <p class="mt-4 font-semibold text-center">1000 rs per month</p>
-                </div>
-
-
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105 ">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> FUNCTIONAL <br /> TRAINING </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-3">
+                        Enhance your everyday movements and core strength
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.1000 per month
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-7 leading-9 tracking-widest">
+                      <div class={alfa.className}> BOXING AND <br /> MARTIAL ARTS </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-3">
+                        Develop self-defense skills and boost agility
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.850 per month
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-7 leading-9 tracking-widest">
+                      <div class={alfa.className}> BALANCE <br /> TRAINING </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-3">
+                        Enhance stability and coordination
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.900 per month
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> PILATES  </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-3">
+                        Strengthen your core and improve flexibility through controlled movements.
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.800 per month
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> STRETCHING AND <br /> FLEXIBILITY </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-3">
+                        Increase flexibility and prevent injuries
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.500 per month
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> AGILITY<br /> TRAINING </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-7">
+                        Improve speed, quickness, and agility
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.600 per month
+                      </div>
+                    </div>
+                  </div>
+                  <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
+                    <div class="box-content">
+                      <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
+                      <div class={alfa.className}> CIRCUIT <br /> TRAINING </div>
+                      </div>
+                      <div class='px-4'>
+                      <div class="text-center text-black text-sm font-semibold px-3 py-2">
+                        Rotate through various exercises for a full-body workout in a short time.
+                      </div>
+                      </div>
+                      <div class="box-footer bg-black text-center text-neutral-100 text-sm font-normal py-3">
+                        Rs.1000 per month
+                      </div>
+                    </div>
+                  </div>
     </div>
 </div>
