--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,5 @@
-<div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
+<div>
+    <div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="md:w-1/2 flex justify-center items-center">
         <div class="mt-4 md:px-12">
             <h1 class="text-7xl text-white font-extrabold">TRAINING </h1>
@@ -27,6 +28,8 @@
                     </div>
                   </div>
 
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105 ">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
@@ -43,6 +46,8 @@
                     </div>
                   </div>
 
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105 ">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
@@ -58,6 +63,9 @@
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-7 leading-9 tracking-widest">
@@ -73,6 +81,9 @@
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-7 leading-9 tracking-widest">
@@ -88,6 +99,9 @@
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
@@ -103,6 +117,9 @@
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
@@ -118,6 +135,9 @@
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
@@ -133,6 +153,9 @@
                       </div>
                     </div>
                   </div>
+
+
+
                   <div class="group bg-orange-200 rounded-lg  hover:bg-orange-300 transition duration-300 transform hover:scale-105">
                     <div class="box-content">
                       <div class="text-center text-black text-xl md:text-xl lg:text-2xl font-bold py-6 leading-9 tracking-widest">
@@ -148,5 +171,18 @@
                       </div>
                     </div>
                   </div>
+          </div>
+     </div>
+  </div>
+</div>
+</div>
+<div class="py-2 px-6">
+<div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col md:flex-row justify-center items-center text-gray-500 text-center gap-12">
+    <h1 class="text-4xl font-extrabold text-left font-serif lg:pr-10">Special Offer</h1>
+    <div>
+    <p class="text-2xl mt-2 lg:px-8 text-center font-semibold font-serif md:text-left">Buy PulsePower's Gym Membership today</p>
+    <p class="text-lg mt-2 lg:px-10  font-semibold font-serif text-left">Start your fitness journey today</p>
     </div>
+    <button class="bg-cyan-300 hover:bg-cyan-200 text-neutral-600 text-lg font-mono font-bold mt-4 px-6 py-2 rounded-full">SIGN ME UP</button>
+</div>
 </div>
