--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,9 +1,9 @@
 <div>
     <div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="md:w-1/2 flex justify-center items-center">
-        <div class="mt-4 md:px-12">
-            <h1 class="text-7xl text-white font-extrabold">TRAINING </h1>
-            <h1 class="text-5xl font-bold text-white pb-6">SERVICES WE OFFER</h1>
+        <div class="mt-4 px-12">
+            <h1 class="text-5xl lg:text-7xl text-white font-extrabold">TRAINING </h1>
+            <h1 class="text-3xl lg:text-5xl font-bold text-white pb-6">SERVICES WE OFFER</h1>
             <p class="mt-2 text-gray-200 font-semibold">Discover a variety of personalized training programs and expert-led fitness classes to help you achieve your fitness goals.</p>
         </div>
     </div>
@@ -181,7 +181,7 @@
     <h1 class="text-4xl font-extrabold text-left font-serif lg:pr-10">Special Offer</h1>
     <div>
     <p class="text-2xl mt-2 lg:px-8 text-center font-semibold font-serif md:text-left">Buy PulsePower's Gym Membership today</p>
-    <p class="text-lg mt-2 lg:px-10  font-semibold font-serif text-left">Start your fitness journey today</p>
+    <p class="text-lg mt-2 lg:px-10 text-center font-semibold font-serif md:text-left">Start your fitness journey today</p>
     </div>
     <button class="bg-cyan-300 hover:bg-cyan-200 text-neutral-600 text-lg font-mono font-bold mt-4 px-6 py-2 rounded-full">SIGN ME UP</button>
 </div>
