--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="mx-auto max-w-screen-xl">
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0 flex flex-col">
-                <a href="https://flowbite.com" class="flex items-center">
+                <a href="" class="flex items-center">
                     <img src="/assets/gymlogo.png" class="mr-3 h-16" alt="FlowBite Logo" />
                     <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PulsePower</span>
                 </a>
@@ -63,7 +63,7 @@
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-black font-semibold">© 2023 <a href="https://flowbite.com"
+            <span class="text-sm text-gray-500 sm:text-center dark:text-black font-semibold">© 2023 <a href=""
                  class="hover:underline">PulsePower™</a>. All Rights Reserved.
             </span>
             <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
