--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -176,7 +176,7 @@
   </div>
 </div>
 </div>
-<div class="py-2 px-6">
+<div class="py-2 bg-orange-50 px-6">
 <div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col md:flex-row justify-center items-center text-gray-500 text-center gap-12">
     <h1 class="text-4xl font-extrabold text-left font-serif lg:pr-10">Special Offer</h1>
     <div>
