--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,3 +1,25 @@
-<section>
-<p>contact works!</p>
-</section>
+<body class="bg-orange-50 flex items-center justify-center h-screen">
+    <div class="bg-orange-200 p-8 w-1/2 items-start rounded-lg shadow-2xl border-2 border-black
+    hover:scale-110 transition duration-300">
+        <h1 class="text-3xl font-bold text-gray-800 text-center font-serif mb-6">GET IN TOUCH</h1>
+        <div class="flex">
+        <ul class="list-none p-0">
+            <li class="mb-4">
+                <span class="font-semibold font-mono">Phone Number:<br/> </span> <a href="tel:+919674948526" class="text-gray-600">+91 9674948526</a>
+            </li>
+            <li class="mb-4">
+                <span class="font-semibold font-mono">Email:<br/> </span> <a href="mailto:pulsepower@gmail.com" class="text-gray-600">pulsepower@gmail.com</a>
+            </li>
+            <li class="mb-4">
+                <span class="font-semibold font-mono">Address:<br/> </span><span class="text-gray-600"> Newtown, Kolkata-700156 </span>
+            </li>
+            <li class="mb-4">
+                <span class="font-semibold font-mono">Website:<br/> </span> <a href="https://www.pulsepower.com" target="_blank" class="text-gray-600">www.pulsepower.com</a>
+            </li>
+        </ul>
+        <div>
+            <img src="/assets/contact.png" alt="CONTACT US" class="w-full h-auto" >
+        </div>
+    </div>
+</div>
+</body>
