--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
        </div>
     </div>
 </div>
-<div class="bg-blend-lighten">
+<div class="bg-orange-50">
 <div class="flex flex-col justify-center py-8 items-center">
    <h1 class="text-2xl md:text-3xl lg:text-3xl font-bold font-serif text-gray-700 py-8">THE MOTIVATION</h1> 
    <p class="flex justify-center font-thin from-stone-600 text-center text-gray-500 max-md:text-sm max-md:px-8 max-lg:px-8 pb-16">At our gym, our mission is rooted in a profound commitment to the pursuit of health and wellness.<br/> 
