feat:added register card

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,50 @@
-<p>register works!</p>
+<body class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/registerbg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
+    <div class="bg-orange-200 p-8 rounded-lg shadow-md max-w-3xl pr-14">
+        <h1 class="text-2xl font-bold font-serif mb-4">LET'S GROW TOGETHER!</h1>
+        <div class="flex">
+        <form id="contactForm" class="space-y-4">
+            <div class="flex flex-col">
+                <label for="name" class="text-sm text-semibold font-mono text-gray-800">Name*</label>
+                <input type="text" id="name" name="name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
+            </div>
+            <div class="flex flex-col">
+                <label for="phone" class="text-sm  text-semibold font-mono text-gray-800">Phone Number*</label>
+                <input type="tel" id="phone" name="phone" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
+            </div>
+            <div class="flex flex-col">
+                <label for="email" class="text-sm  text-semibold font-mono text-gray-1=800">Email ID*</label>
+                <input type="email" id="email" name="email" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
+            </div>
+            <div class="flex flex-col">
+                <label for="program" class="text-sm text-semibold font-mono text-gray-800">Program*</label>
+                <select id="program" name="program" class="border rounded-lg font-serif text-sm bg-neutral-100 px-3 py-2 focus:outline-none focus:border-blue-500">
+                    <option value="option1">Cardio Training</option>
+                    <option value="option2">Weight Training</option>
+                    <option value="option3">Functional Training</option>
+                    <option value="option3">Boxing and Martial Arts</option>
+                    <option value="option3">Balance Training</option>
+                    <option value="option3">Pilates</option>
+                    <option value="option3">Stretching and flexibility</option>
+                    <option value="option3">Agility Training</option>
+                    <option value="option3">Circuit Training</option>
+                </select>
+            </div>
+            
+            <div class="flex justify-center">
+                <button type="submit" class="bg-blue-900 text-white py-3 px-7 font-mono rounded-full hover:bg-blue-400 focus:outline-none focus:bg-blue-500">
+                    REGISTER
+                </button>
+            </div>
+        </form>
+        <div class="w-3/4 flex justify-center items-center">
+            <img src="/assets/registercard.png" alt="Image" class="w-auto h-full">
+        </div>
+    </div>
+</div>  
+</body>
+<div class="py-2 bg-orange-50 px-6">
+    <div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col justify-center items-center text-gray-700 text-center gap-12">
+        <h1 class="text-4xl font-extrabold text-left font-serif lg:pr-10">We can offer you way more than what others can!</h1>
+        <img src="/assets/bannerlogo.png" alt="PulsePower" class="w-1/3">
+    </div>
+    </div>
