--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-navbar></app-navbar>
 <app-home></app-home>
 <app-about></app-about>
+<app-register></app-register>
 <app-enquiry></app-enquiry>
 <app-contact></app-contact>
 <app-footer></app-footer>
+
 
