--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,22 +1,22 @@
-<body class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/registerbg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
-    <div class="bg-orange-200 p-8 rounded-lg shadow-md max-w-3xl pr-14">
-        <h1 class="text-2xl font-bold font-serif mb-4">LET'S GROW TOGETHER!</h1>
+<body class="min-h-screen flex max-md:flex-col justify-center items-center" style="background-image: url('/assets/registerbg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
+    <div class="backdrop-blur-lg  p-8 rounded-lg shadow-md max-w-3xl pr-14">
+        <h1 class="text-2xl font-extrabold text-gray-100 font-serif mb-4">LET'S GROW TOGETHER!</h1>
         <div class="flex">
         <form id="contactForm" class="space-y-4">
             <div class="flex flex-col">
-                <label for="name" class="text-sm text-semibold font-mono text-gray-800">Name*</label>
+                <label for="name" class="text-sm text-bold font-mono text-gray-200">Name*</label>
                 <input type="text" id="name" name="name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
             </div>
             <div class="flex flex-col">
-                <label for="phone" class="text-sm  text-semibold font-mono text-gray-800">Phone Number*</label>
+                <label for="phone" class="text-sm  text-bold font-mono text-gray-200">Phone Number*</label>
                 <input type="tel" id="phone" name="phone" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
             </div>
             <div class="flex flex-col">
-                <label for="email" class="text-sm  text-semibold font-mono text-gray-1=800">Email ID*</label>
+                <label for="email" class="text-sm  text-bold font-mono text-gray-200">Email ID*</label>
                 <input type="email" id="email" name="email" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
             </div>
             <div class="flex flex-col">
-                <label for="program" class="text-sm text-semibold font-mono text-gray-800">Program*</label>
+                <label for="program" class="text-sm text-bold font-mono text-gray-200">Programme*</label>
                 <select id="program" name="program" class="border rounded-lg font-serif text-sm bg-neutral-100 px-3 py-2 focus:outline-none focus:border-blue-500">
                     <option value="option1">Cardio Training</option>
                     <option value="option2">Weight Training</option>
@@ -36,8 +36,8 @@
                 </button>
             </div>
         </form>
-        <div class="w-3/4 flex justify-center items-center">
-            <img src="/assets/registercard.png" alt="Image" class="w-auto h-full">
+        <div class="pl-16 flex justify-center items-center">
+            <img src="/assets/regcard.png" alt="Image" class="w-full h-full">
         </div>
     </div>
 </div>  
