--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="p-4 sm:p-6 dark:bg-black" [style.backgroundImage]="'url(assets/footergym.jpg)'" style="background-size: cover; background-repeat: no-repeat;">
+<footer class="p-4 sm:p-6 dark:bg-gray-950" >
     <div class="mx-auto max-w-screen-xl">
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0 flex flex-col">
@@ -63,7 +63,7 @@
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-black font-semibold">© 2023 <a href=""
+            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-200 font-semibold">© 2023 <a href=""
                  class="hover:underline">PulsePower™</a>. All Rights Reserved.
             </span>
             <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
