--- a/src/app/pages/enquiry/enquiry.component.html
+++ b/src/app/pages/enquiry/enquiry.component.html
@@ -1,5 +1,5 @@
 <body class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/inquirybg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
-    <div class="backdrop-blur-lg hover:scale-110 p-8 rounded-lg shadow-md max-w-3xl border-4 pr-14">
+    <div class="backdrop-blur-lg hover:scale-110 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl border-4 pr-14">
         <h1 class="text-2xl font-extrabold text-white font-serif mb-4">YOUR INQUIRIES, OUR INSIGHTS!</h1>
         <div class="flex">
         <form id="contactForm" class="space-y-4">
@@ -35,5 +35,5 @@
     <div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col md:flex-row justify-center items-center text-gray-700 text-center gap-12">
         <h1 class="text-3xl font-extrabold text-center font-serif lg:pr-10">We have got you covered. Reach out to us for an queries regarding our programmes!
         </h1>
-        </div>
     </div>
+</div>
