--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
 <app-navbar></app-navbar>
-<app-home></app-home>
-<app-about></app-about>
-<app-register></app-register>
-<app-enquiry></app-enquiry>
-<app-contact></app-contact>
+<app-home>
+    <router-outlet></router-outlet>
+</app-home>
+<app-about>
+    <router-outlet></router-outlet>
+</app-about>
+<app-register>
+    <router-outlet></router-outlet>
+</app-register>
+<app-enquiry>
+    <router-outlet></router-outlet>
+</app-enquiry>
+<app-contact>
+    <router-outlet></router-outlet>
+</app-contact>
 <app-footer></app-footer>
 
 
