--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,4 @@
+<div id="#about">
 <div>
     <div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="md:w-1/2 flex justify-center items-center">
@@ -184,5 +185,6 @@
     <p class="text-lg mt-2 lg:px-10 text-center font-semibold font-serif md:text-left">Start your fitness journey today</p>
     </div>
     <button class="bg-cyan-300 hover:bg-cyan-200 text-neutral-600 text-lg font-mono font-bold mt-4 px-6 py-2 rounded-full">SIGN ME UP</button>
+</div>
 </div>
 </div>
