--- a/src/app/pages/enquiry/enquiry.component.html
+++ b/src/app/pages/enquiry/enquiry.component.html
@@ -1,23 +1,24 @@
-<body class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/inquirybg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
+<div id="#enquiry" #enquiry>
+<div  class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/inquirybg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="backdrop-blur-lg hover:scale-110 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl border-4 pr-14">
         <h1 class="text-2xl font-extrabold text-white font-serif mb-4">YOUR INQUIRIES, OUR INSIGHTS!</h1>
         <div class="flex">
         <form id="contactForm" class="space-y-4">
             <div class="flex flex-col">
                 <label for="name" class="text-sm text-semibold font-mono text-gray-200">Name*</label>
-                <input type="text" id="name" name="name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
+                <input type="text" id="name" name="name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
             </div>
             <div class="flex flex-col">
                 <label for="phone" class="text-sm  text-semibold font-mono text-gray-200">Phone Number*</label>
-                <input type="tel" id="phone" name="phone" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
+                <input type="tel" id="phone" name="phone" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
             </div>
             <div class="flex flex-col">
                 <label for="email" class="text-sm  text-semibold font-mono text-gray-200">Email ID*</label>
-                <input type="email" id="email" name="email" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500">
+                <input type="email" id="email" name="email" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
             </div>
             <div class="flex flex-col">
                 <label for="question" class="text-sm  text-semibold font-mono text-gray-200">Question for Us*</label>
-                <textarea id="question" name="question" rows="4" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500"></textarea>
+                <textarea id="question" name="question" rows="4" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required></textarea>
             </div>
             <div class="flex justify-center">
                 <button type="submit" class="bg-blue-900 text-white py-3 px-7 font-mono rounded-full hover:bg-blue-400 focus:outline-none focus:bg-blue-500">
@@ -30,10 +31,11 @@
         </div>
     </div>
 </div>
-</body>
+</div>
 <div class="py-2 bg-orange-50 px-6">
     <div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col md:flex-row justify-center items-center text-gray-700 text-center gap-12">
         <h1 class="text-3xl font-extrabold text-center font-serif lg:pr-10">We have got you covered. Reach out to us for an queries regarding our programmes!
         </h1>
     </div>
+</div>
 </div>
