--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<div id="#" #home>
 <div class="p-4 pb-12 sm:p-6 dark:bg-black relative flex items-center justify-center min-h-screen" style="background-image: url('/assets/homegym.jpg'); background-size: cover; background-repeat: no-repeat;">
     <div class="text-left max-md:px-4 relative z-10 backdrop-blur-sm bg-opacity-40 bg-gray-900 p-6 rounded-xl">
        <h1 class="text-white font-bold text-2xl md:text-3xl lg:text-4xl">LOOKING FOR</h1>
@@ -22,5 +23,6 @@
       Witnessing the incredible transformations our members undergo is what drives us every day, reminding 
       us of the immense value a <br/>gym can bring to those seeking a healthier and happier life.</p>
       <img src="/assets/homeimg.png" alt="Gym" class="w-1/4 max-md:w-1/2" >
+</div>
 </div>
 </div>
