update: added routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,8 @@
-<app-navbar></app-navbar>
-<app-home>
+<nav>
+    <app-navbar></app-navbar>
+</nav>
+
     <router-outlet></router-outlet>
-</app-home>
-<app-about>
-    <router-outlet></router-outlet>
-</app-about>
-<app-register>
-    <router-outlet></router-outlet>
-</app-register>
-<app-enquiry>
-    <router-outlet></router-outlet>
-</app-enquiry>
-<app-contact>
-    <router-outlet></router-outlet>
-</app-contact>
 <app-footer></app-footer>
 
 
