--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,8 +6,8 @@
        <p class="text-white font-semibold pt-8">Welcome to PulsePower Gym, where fitness meets transformation. <br/>
         Our state-of-the-art facility and dedicated team are here to help you achieve your fitness goals and lead a healthier, happier life.</p>
        <div class="flex gap-4">
-       <button class="bg-blue-400 hover:bg-blue-200 text-white font-bold md:py-3  py-1 px-4 text-sm md:text-lg md:px-10 mt-4 rounded-full">JOIN US</button>
-       <button class="bg-transparent hover:bg-gray-300 text-white font-bold text-sm md:text-lg py-1 md:py-3 px-4 md:px-10 mt-4 rounded-full border border-white">ASK YOUR DOUBTS</button>
+       <a routerLink="register"><button class="bg-blue-400 hover:bg-blue-200 text-white font-bold md:py-3  py-1 px-4 text-sm md:text-lg md:px-10 mt-4 rounded-full">JOIN US</button></a>
+       <a routerLink="enquiry"><button class="bg-transparent hover:bg-gray-300 text-white font-bold text-sm md:text-lg py-1 md:py-3 px-4 md:px-10 mt-4 rounded-full border border-white">ASK YOUR DOUBTS</button></a>
        </div>
     </div>
 </div>
