--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -49,13 +49,13 @@
                     <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Quick Links</h2>
                     <ul class="text-gray-300 gap-4 font-semibold">
                         <li>
-                            <a href="#" class="hover:underline">About us</a>
+                            <a routerLink="about" class="hover:underline">About us</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:underline">Enquiry</a>
+                            <a routerLink="enquiry" class="hover:underline">Enquiry</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:underline">Contact Us</a>
+                            <a routerLink="contact" class="hover:underline">Contact Us</a>
                         </li>
                     </ul>
                 </div>
