--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,4 @@
-<div id="#about">
+<div id="#about" #about>
 <div>
     <div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="md:w-1/2 flex justify-center items-center">
@@ -184,7 +184,7 @@
     <p class="text-2xl mt-2 lg:px-8 text-center font-semibold font-serif md:text-left">Buy PulsePower's Gym Membership today</p>
     <p class="text-lg mt-2 lg:px-10 text-center font-semibold font-serif md:text-left">Start your fitness journey today</p>
     </div>
-    <button class="bg-cyan-300 hover:bg-cyan-200 text-neutral-600 text-lg font-mono font-bold mt-4 px-6 py-2 rounded-full">SIGN ME UP</button>
+    <a routerLink="/register"> <button class="bg-cyan-300 hover:bg-cyan-200 text-neutral-600 text-lg font-mono font-bold mt-4 px-6 py-2 rounded-full">SIGN ME UP</button></a>
 </div>
 </div>
 </div>
